workspace-sf/force-app/main/default/objects/Product2_Event__e/Product2_Event__e.object-meta.xml
<CustomObject>
    <label>Product2 Event</label>
    <pluralLabel>Product2 Events</pluralLabel>
</CustomObject>