workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/LimiteTotalCarregamento__c.field-meta.xml
<CustomField>
    <fullName>LimiteTotalCarregamento__c</fullName>
    <label>LimTtlCar</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>