workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/NumSusep__c.field-meta.xml
<CustomField>
    <fullName>NumSusep__c</fullName>
    <label>NumeroSusep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>