workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/Ordenacao__c.field-meta.xml
<CustomField>
    <fullName>Ordenacao__c</fullName>
    <label>Ordenacao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>