workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/PercentualAgravoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualAgravoMinimo__c</fullName>
    <label>PercentualAgravoMinimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>