workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/PercentualDescontoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoMaximo__c</fullName>
    <label>PercentualDescontoMaximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>