workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>