workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/ProdutoTecnico__c.field-meta.xml
<CustomField>
    <fullName>ProdutoTecnico__c</fullName>
    <label>ProdutoTecnico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>