workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/ProdutoVigente__c.field-meta.xml
<CustomField>
    <fullName>ProdutoVigente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProdutoVigente</label>
    <type>Checkbox</type>
</CustomField>