workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/RelacaoVidas__c.field-meta.xml
<CustomField>
    <fullName>RelacaoVidas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RelacaoVidas</label>
    <type>Checkbox</type>
</CustomField>