workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/TipoCapital__c.field-meta.xml
<CustomField>
    <fullName>TipoCapital__c</fullName>
    <label>TipoCapital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>