workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <label>Versao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>