workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/VersaoAnterior__c.field-meta.xml
<CustomField>
    <fullName>VersaoAnterior__c</fullName>
    <label>VersaoAnterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>