workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/VersaoMaxima__c.field-meta.xml
<CustomField>
    <fullName>VersaoMaxima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VersaoMaxima</label>
    <type>Checkbox</type>
</CustomField>