workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/VersaoRenovacao__c.field-meta.xml
<CustomField>
    <fullName>VersaoRenovacao__c</fullName>
    <label>VersaoRenovacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>