workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/VigenciaFinal__c.field-meta.xml
<CustomField>
    <fullName>VigenciaFinal__c</fullName>
    <label>VigenciaFinal</label>
    <type>Date</type>
</CustomField>