workspace-sf/force-app/main/default/objects/Product2_Event__e/fields/VigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicial__c</fullName>
    <label>VigenciaInicial</label>
    <type>Date</type>
</CustomField>